# hsqml

./: .gitignore  README.md  hsqml.cabal
cbits/: HsQMLClass.cpp  HsQMLClass.h  HsQMLIntrinsics.cpp  HsQMLManager.cpp  HsQMLManager.h  HsQMLObject.cpp  HsQMLObject.h  HsQMLWindow.cpp  HsQMLWindow.h  hsqml.h
examples/simple/: DataType.hs  Main.hs  simple.cabal
examples/simple/content/: Card.qml  ClickNode.qml  TabWidget.qml  main.qml
src/Graphics/QML/: Engine.hs
src/Graphics/QML/Internal/: Classes.chs  Core.hs  Engine.chs  Intrinsics.chs  Primitive.hs  TH.hs
src/Graphics/QML/Types/: Classes.hs  Intrinsics.hs
